--- a/Dockerfile-distroless
+++ b/Dockerfile-distroless
@@ -5,6 +5,6 @@ ENV NODE_ENV=production
 
 WORKDIR /app
 
-COPY --chown=node:node ["package.json", "index.js", "./"]
+COPY --chown=node:node ["package.json", "server.js", "./"]
 
 CMD [ "index.js" ]
